# ISP_Pipeline

./: .gitignore  CMakeLists.txt  README.md  test_omp.cpp
cuda/: README.md  bilateral_cuda.cu
data/: output.ppm  output_no_awb.ppm  test.raw  test_input.raw
include/: image.hpp  io.hpp  rgb_image.hpp
include/modules/: awb.hpp  blc.hpp  demosaic.hpp  denoise.hpp  gamma.hpp  sharpen.hpp
network/: Makefile  frame_receiver.cpp
src/: image.cpp  io.cpp  main.cpp  rgb_image.cpp
src/modules/: awb.cpp  blc.cpp  demosaic.cpp  denoise.cpp  gamma.cpp  sharpen.cpp
tools/: generate_test_raw.cpp
